# liberated-claude-code

./: README.md  claude-pick  claude-switch.sh  justfile  pyproject.toml
api/: dependencies.py  routes.py
claude_with/: README.md  __init__.py  __main__.py  cli.py  config.py  keys.py  providers.py  pyproject.toml
claude_with/templates/: .env.example  config.toml  setup.sh
config/: settings.py
docs/: getting-started.md  translation-layer.md
docs/superpowers/plans/: 2026-04-18-ollama-proxy.md  2026-04-21-openai-compat-anthropic-naming.md
docs/superpowers/specs/: 2026-04-18-ollama-proxy-design.md  2026-04-21-openai-compat-anthropic-naming-design.md
messaging/rendering/: discord_markdown.py  telegram_markdown.py
providers/: __init__.py
providers/ollama/: __init__.py  cloud.py  local.py
providers/openai_compat_generic/: __init__.py  client.py
tests/: test_ollama_settings.py  test_openai_compat_settings.py
tests/cli/: test_cli.py
tests/integration/: test_claude_with.py
tests/providers/: test_ollama_cloud.py  test_openai_compat.py
