[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-with"
version = "0.1.0"
description = "Ephemeral switching for Claude Code with multi-provider support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "tomli>=2.0.0",
]

[project.scripts]
claude-with = "claude_with.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_with"]